Avoid baseline alignment for images, and with HTML “height” attribute

--- a/firefox/chrome-userContent.css
+++ b/firefox/chrome-userContent.css
@@ -6,7 +6,9 @@ html, body {font-family: inherit !important}
 
 h1, h2, h3, h4, h5, h6 {font-family: sans-serif}
 dt {font-weight: bolder}
+
 tbody {vertical-align: baseline}
+tbody img, tbody *[height] {vertical-align: middle}
 
 /* Redistribute content from left-hand margin */
 .mediawiki #column-content, .mediawiki #content {
